Fix nested list spacing

--- a/src/index.css
+++ b/src/index.css
@@ -366,7 +366,7 @@ body:has([data-resizing="true"]) * {
 .markdown ul ol,
 .markdown ol ul,
 .markdown ol ol {
-  @apply my-1;
+  @apply !mt-1 mb-1;
 }
 
 .markdown li {
